@@ -1,3 +1,9 @@
+2002-10-31  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b17
+
+	* Fixed a bug in view_album.php where we were generating admin links
+	  with "albumName=xxx" instead of "set_albumName=xxx".  This would
+	  cause fatal errors under certain rare circumstances.
+
 2002-10-31  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b16
 
 	* Minor tweak: if the full name is empty, display the username in the
